# diffevogpu

./: LICENSE  README.md  pyproject.toml
examples/: quickstart.ipynb
src/devojax/: __init__.py  initialisation.py  optimiser.py
src/devojax/cupy/: initialisation.py  steps.py  strategy.py
src/devojax/jax/: steps.py  strategy.py
